--- a/public/article.html
+++ b/public/article.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i&amp;amp;subset=cyrillic">
-    <link rel="stylesheet" href="css/style.css?ts=1518951270665">
+    <link rel="stylesheet" href="css/style.css?ts=1518970766586">
   </head>
   <body class="page">
     <svg width="0" height="0" hidden version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -140,16 +140,16 @@
           <div class="s-menu-catalog__column s-menu-catalog__column_buttons">
             <div class="s-menu-catalog__buttons buttons-menu-catalog">
               <div class="buttons-menu-catalog__item">
-                <button class="button button_size_xs button_theme_o-black-yellow button_round_5">Каталог</button>
+                <button class="button button_size_xs button_theme_o-black-yellow button_round_5" :class="{'button_state_black': topMenuCatalog == 1}" @click="topMenuCatalog = 1">Каталог</button>
               </div>
               <div class="buttons-menu-catalog__item">
-                <button class="button button_size_xs button_theme_o-black-yellow button_round_5">Входная группа</button>
+                <button class="button button_size_xs button_theme_o-black-yellow button_round_5" :class="{'button_state_black': topMenuCatalog == 2}" @click="topMenuCatalog = 2">Входная группа</button>
               </div>
               <div class="buttons-menu-catalog__item">
-                <button class="button button_size_xs button_theme_o-black-yellow button_round_5">Санузел</button>
+                <button class="button button_size_xs button_theme_o-black-yellow button_round_5" :class="{'button_state_black': topMenuCatalog == 3}" @click="topMenuCatalog = 3">Санузел</button>
               </div>
               <div class="buttons-menu-catalog__item">
-                <button class="button button_size_xs button_theme_o-black-yellow button_round_5">Пути следований</button>
+                <button class="button button_size_xs button_theme_o-black-yellow button_round_5" :class="{'button_state_black': topMenuCatalog == 4}" @click="topMenuCatalog = 4">Пути следований</button>
               </div>
             </div>
           </div>
