--- a/public/article.html
+++ b/public/article.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i&amp;amp;subset=cyrillic">
-    <link rel="stylesheet" href="css/style.css?ts=1518994489257">
+    <link rel="stylesheet" href="css/style.css?ts=1518998760656">
   </head>
   <body class="page">
     <svg width="0" height="0" hidden version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -695,6 +695,20 @@
               <p class="p offset-0">Спойлер обычный текст</p>
             </div>
           </div>
+          <div class="c-envelope offset-50" style="background-image: url(images/bg-b1.jpg);">
+            <div class="c-envelope__blur" style="background-image: url(images/bg-b1.jpg);"></div>
+            <div class="c-envelope__container">
+              <div class="c-envelope__title text-dark-brown">Комфортная Среда</div>
+              <div class="c-envelope__icons c-envelope__icons_skew paper-fir-green"><img class="c-envelope__icon" src="images/icons/1.svg" width="30" height="26"><img class="c-envelope__icon" src="images/icons/2.svg" width="28" height="30"><img class="c-envelope__icon" src="images/icons/3.svg" width="26" height="30"></div>
+            </div>
+          </div>
+          <div class="c-envelope offset-50" style="background-image: url(images/bg-b2.jpg);">
+            <div class="c-envelope__blur" style="background-image: url(images/bg-b2.jpg);"></div>
+            <div class="c-envelope__container">
+              <div class="c-envelope__title text-white">Строительные Технологии</div>
+              <div class="c-envelope__icons"><img class="c-envelope__icon" src="images/icons/11.svg" width="30" height="26"><img class="c-envelope__icon" src="images/icons/12.svg" width="28" height="30"><img class="c-envelope__icon" src="images/icons/13.svg" width="26" height="30"><img class="c-envelope__icon" src="images/icons/14.svg" width="26" height="30"></div>
+            </div>
+          </div>
           <h2 class="h2 text-granite offset-20">Галерея</h2>
           <div class="gallery-slider offset-50">
             <div class="gallery-slider__pr">
@@ -727,6 +741,34 @@
                 </svg>
               </button>
             </div>
+          </div>
+          <div class="g-gallery offset-20">
+            <div class="g-gallery__card"><a href="images/grid-gallery/1.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/1.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/2.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/2.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/3.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/3.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/4.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/4.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/5.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/5.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/6.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/6.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/7.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/7.jpg" width="204" height="135" alt="Фото"></a></div>
+            <div class="g-gallery__card"><a href="images/grid-gallery/8.jpg" data-fancybox="gallery"><img class="image-full" src="images/grid-gallery/8.jpg" width="204" height="135" alt="Фото"></a></div>
+          </div>
+          <div class="list-icons list-icons_small offset-20"> 
+            <div class="list-icons__icon"><img src="images/icons/4.svg" alt=""></div>
+            <div class="list-icons__title">Кровельные и фасадные материалы</div>
+            <div class="list-icons__icon"><img src="images/icons/5.svg" alt=""></div>
+            <div class="list-icons__title">Ворота, шагбаумы, противопожарные двери </div>
+            <div class="list-icons__icon"><img src="images/icons/6.svg" alt=""></div>
+            <div class="list-icons__title">Алюминиевые, металлопластиковые конструкции</div>
+            <div class="list-icons__icon"><img src="images/icons/7.svg" alt=""></div>
+            <div class="list-icons__title">Металлоконструкции, лестницы, ограждения</div>
+          </div>
+          <div class="list-icons list-icons_medium offset-20"> 
+            <div class="list-icons__icon"><img src="images/icons/8.svg" alt=""></div>
+            <div class="list-icons__title">Пункт 1</div>
+            <div class="list-icons__icon"><img src="images/icons/9.svg" alt=""></div>
+            <div class="list-icons__title">Пункт 2</div>
+            <div class="list-icons__icon"><img src="images/icons/10.svg" alt=""></div>
+            <div class="list-icons__title">Пункт 3</div>
           </div>
         </div>
       </div>
