✅ Страница пример вариантов сетки католога

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i&amp;amp;subset=cyrillic">
-    <link rel="stylesheet" href="css/style.css?ts=1519034426087">
+    <link rel="stylesheet" href="css/style.css?ts=1519050233730">
   </head>
   <body class="page">
     <svg width="0" height="0" hidden version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -723,112 +723,31 @@
             <h2 class="s-main-catalog__title t2">Товары и Оборудование для адаптации</h2>
             <div class="s-main-catalog__grid">
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/1.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Тактильная вывеска с шрифтом Брайля 500х600мм</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Композит	<br> Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">2289.00 ₽</footer>
-                </div>
+                <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="2289.00 ₽" image="images/catalog/1.jpg" link="#">Материал: Композит	<br> Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/2.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Беспроводная кнопка вызова помощи для инвалидов ДП-1м</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Композит	<br> Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">21 489.00 ₽</footer>
-                </div>
+                <card-catalog title="Беспроводная кнопка вызова помощи для инвалидов ДП-1м" price="21 489.00 ₽" image="images/catalog/2.jpg" link="#">Материал: Композит	<br> Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/3.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Тактильная вывеска с шрифтом Брайля 500х600мм</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Акрил/ПВХ/Композит	<br>Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">7089.00 ₽</footer>
-                </div>
+                <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="7089.00 ₽" image="images/catalog/3.jpg" link="#">Материал: Акрил/ПВХ/Композит	<br>Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/4.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Тактильная вывеска с шрифтом Брайля 500х600мм</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Композит	<br> Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">4500.00 ₽</footer>
-                </div>
+                <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4500.00 ₽" image="images/catalog/4.jpg" link="#">Материал: Композит	<br> Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/5.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Беспроводная кнопка вызова помощи для инвалидов ДП-1м</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Композит	<br> Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">6100.00 ₽</footer>
-                </div>
+                <card-catalog title="Беспроводная кнопка вызова помощи для инвалидов ДП-1м" price="6100.00 ₽" image="images/catalog/5.jpg" link="#">Материал: Композит	<br> Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/6.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Тактильная вывеска с шрифтом Брайля 500х600мм</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Акрил/ПВХ/Композит	<br>Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">4400.00 ₽</footer>
-                </div>
+                <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4400.00 ₽" image="images/catalog/6.jpg" link="#">Материал: Акрил/ПВХ/Композит	<br>Размер: 500х600мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/7.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Беспроводная кнопка вызова помощи для инвалидов ДП-1м</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Размер: 150х200мм <br>Материал: кнопка влагозащитная (IP44), приемное устройство, <br>табличка композит</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">1089.00 ₽</footer>
-                </div>
+                <card-catalog title="Беспроводная кнопка вызова помощи для инвалидов ДП-1м" price="1089.00 ₽" image="images/catalog/7.jpg" link="#">Размер: 150х200мм <br>Материал: кнопка влагозащитная (IP44), приемное устройство, <br>табличка композит</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/8.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Тактильные наклейки на окончании поручни 3 шт...</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Пленка с/к	<br>Размер: 40х120мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">7000.00 ₽</footer>
-                </div>
+                <card-catalog title="Тактильные наклейки на окончании поручни 3 шт..." price="7000.00 ₽" image="images/catalog/8.jpg" link="#">Материал: Пленка с/к	<br>Размер: 40х120мм</card-catalog>
               </div>
               <div class="s-main-catalog__item">
-                <div class="c-catalog">
-                  <header class="c-catalog__header"><a href="#"><img class="c-catalog__pr image-responsive" src="images/catalog/9.jpg" width="188" height="140"></a></header>
-                  <div class="c-catalog__body">
-                    <div class="c-catalog__title"><a class="c-catalog__title-inner" href="#">Беспроводная кнопка вызова помощи для инвалидов ДП-1м</a></div>
-                    <div class="c-catalog__chars">
-                      <div class="c-catalog__chars-inner">Материал: Композит	<br> Размер: 500х600мм</div>
-                    </div>
-                  </div>
-                  <footer class="c-catalog__foo">21 489.00 ₽</footer>
-                </div>
+                <card-catalog title="Беспроводная кнопка вызова помощи для инвалидов ДП-1м" price="21 489.00 ₽" image="images/catalog/9.jpg" link="#">Материал: Композит	<br> Размер: 500х600мм</card-catalog>
               </div>
             </div>
             <div class="s-main-catalog__paper paper-with-button --h-175 paper-yellow">
