--- a/public/card.html
+++ b/public/card.html
@@ -9,7 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web:400,400i,700,700i&amp;amp;subset=cyrillic">
-    <link rel="stylesheet" href="css/style.css?ts=1519047226751">
+    <link rel="stylesheet" href="css/style.css?ts=1519049667306">
   </head>
   <body class="page">
     <svg width="0" height="0" hidden version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -743,7 +743,7 @@
           <div class="s-chars__column s-chars__column_aside">
             <div class="aside-rec">
               <div class="aside-rec__title">Вам также может <br>понадобиться:</div>
-              <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4400.00 ₽" image="images/catalog/6.jpg" :mods="{tile: app.width &lt; 992}">Материал: Акрил/ПВХ/Композит<br>Размер: 500х600мм</card-catalog>
+              <card-catalog title="Тактильная вывеска с шрифтом Брайля 500х600мм" price="4400.00 ₽" image="images/catalog/6.jpg" :mods="{list: app.width &lt; 992}">Материал: Акрил/ПВХ/Композит<br>Размер: 500х600мм</card-catalog>
             </div>
           </div>
         </div>
